# package-manager

./: .gitignore  Cargo.toml  LICENSE  manifest.json
src/: device.rs  download.rs  hash.rs  main.rs  manifest.rs  tests.rs
