[package]
name = "package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
tokio = {version = "1.38.0", features = ["full"]}
reqwest = {version = "0.12.5", features = ["blocking"]}
tempfile = "3.10.1"
bytes = "1.6.0"
zip = "2.1.3"
url = "2.5.2"
sha2 = "0.10.8"